--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images\tulja.jpg" alt="" />
 									</span>
 								</section>
 
@@ -134,7 +134,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2023-09-18 at 11.38.29 PM (1).jpeg" alt="" /></a>
 											<h3>Customer Satisfaction Awards</h3>
 											<p>Consistently ranked as a top performer in customer satisfaction surveys.
 												Received numerous awards for providing exceptional service and support to our clients.</p>
@@ -143,7 +143,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2023-09-18 at 11.40.45 PM.jpeg" alt="" /></a>
 											<h3>Financial Expertise</h3>
 											<p>Our team of financial advisors and experts have been recognized for their knowledge and professionalism.
 												We have been featured in financial publications and have received accolades for our financial planning strategies.</p>
@@ -152,7 +152,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2023-09-18 at 11.38.29 PM.jpeg" alt="" /></a>
 											<h3>Industry Leadership</h3>
 											<p>Tulja has emerged as a leader in the financial services and insurance sectors.
 												We have played an active role in shaping industry best practices and standards.</p>
@@ -161,7 +161,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2023-09-18 at 11.40.46 PM (1).jpeg" alt="" /></a>
 											<h3>Community Engagement</h3>
 											<p>Committed to giving back to the community, we have received recognition for our charitable contributions and community service initiatives.</p>
 											<ul class="actions">
@@ -169,7 +169,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2023-09-18 at 11.40.46 PM.jpeg" alt="" /></a>
 											<h3>Innovation and Technology</h3>
 											<p>Embracing innovation and technology, we have been acknowledged for our advancements in digital services and online solutions.</p>
 											<ul class="actions">
@@ -177,7 +177,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\WhatsApp Image 2023-09-18 at 11.40.45 PM.jpeg" alt="" /></a>
 											<h3>Sustainability Efforts</h3>
 											<p>Tulja is dedicated to sustainability and environmental responsibility.
 												We have been honored for our eco-friendly practices and commitment to a greener future.</p>
